language/move-prover/tests/sources/stdlib/modules/bytearray_util.exp
Move prover returns: exiting with checking errors
error:

   ┌── tests/sources/stdlib/modules/bytearray_util.move:4:47 ───
   │
 4 │     native public fun bytearray_concat(data1: bytearray, data2: bytearray): bytearray;
   │                                               ^^^^^^^^^ Unbound type 'bytearray' in current scope
   │

error:

   ┌── tests/sources/stdlib/modules/bytearray_util.move:4:65 ───
   │
 4 │     native public fun bytearray_concat(data1: bytearray, data2: bytearray): bytearray;
   │                                                                 ^^^^^^^^^ Unbound type 'bytearray' in current scope
   │

error:

   ┌── tests/sources/stdlib/modules/bytearray_util.move:4:77 ───
   │
 4 │     native public fun bytearray_concat(data1: bytearray, data2: bytearray): bytearray;
   │                                                                             ^^^^^^^^^ Unbound type 'bytearray' in current scope
   │
