language/move-prover/tests/sources/stdlib/modules/bytearray_util.move
address 0x0:

module BytearrayUtil {
    native public fun bytearray_concat(data1: bytearray, data2: bytearray): bytearray;
}
